--- a/site/src/app/components/partials/user-loaned-list/user-loaned-list.component.html
+++ b/site/src/app/components/partials/user-loaned-list/user-loaned-list.component.html
@@ -38,7 +38,7 @@
       <td class="actions">
         <div
           class="button red"
-          [ngClass]="getButtonClasses(loan.state.name)"
+          [ngClass]="getButtonClasses(loan.state.name, 'LOANED', 'RETURN_REQUESTED')"
           (click)="
             loan.state.name === 'LOANED' &&
               onLoanReturnRequest(loan.equipment.code)
