rename table column

--- a/site/src/app/components/partials/user-loanable-list/user-loanable-list.component.html
+++ b/site/src/app/components/partials/user-loanable-list/user-loanable-list.component.html
@@ -2,7 +2,7 @@
   <thead>
     <tr>
       <th>Code</th>
-      <th>Nom</th>
+      <th>Référence</th>
       <th>Réservé aux organisations</th>
       <th>Salle de stockage</th>
       <th>Actions</th>
