--- a/site/src/app/components/partials/administration-loaned-list/administration-loaned-list.component.html
+++ b/site/src/app/components/partials/administration-loaned-list/administration-loaned-list.component.html
@@ -5,7 +5,7 @@
       <th>Date de prêt</th>
       <th>Date de retour</th>
       <th>Code</th>
-      <th>Nom</th>
+      <th>Référence</th>
       <th>Utilisateur</th>
       <th>Organisation</th>
       <th>Salle</th>
