--- a/site/src/app/components/pages/administration/account/list/list.component.html
+++ b/site/src/app/components/pages/administration/account/list/list.component.html
@@ -1,3 +1,4 @@
-<div class="page">
+<div class="page user-list-page">
+    <button class="add-account-button blue"  (click)="navigateToAddAccount()">Ajouter un compte</button>
     <app-administration-account-list></app-administration-account-list>
 </div>
