--- a/site/src/app/components/pages/administration/account/list/list.component.css
+++ b/site/src/app/components/pages/administration/account/list/list.component.css
@@ -3,11 +3,12 @@
 }
 
 .add-account-button {
-    padding: 0.7em;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    width: 100%;
-    margin-top: 1em;
-    max-width: 400px;
-  }
+  padding: 0.7em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
+  margin-top: 1em;
+  max-width: 400px;
+  color: white;
+}
