--- a/site/src/app/components/pages/account/account.component.html
+++ b/site/src/app/components/pages/account/account.component.html
@@ -1,5 +1,5 @@
 <div class="page account-page">
   <app-account-form></app-account-form>
-  <button class="logout-button red" (click)="logout()">Déconnexion</button>
+  <button class="red" (click)="logout()">Déconnexion</button>
 </div>
   
