--- a/site/src/app/components/pages/administration/account/list/list.component.html
+++ b/site/src/app/components/pages/administration/account/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="page user-list-page">
-    <button class="add-account-button blue"  (click)="navigateTo('/administration/account/add')">Ajouter un compte</button>
+<div class="page list-page">
+    <button class="blue"  (click)="navigateTo('/administration/account/add')">Ajouter un compte</button>
     <app-administration-account-list></app-administration-account-list>
 </div>
