--- a/site/src/app/components/pages/administration/reference/list/list.component.html
+++ b/site/src/app/components/pages/administration/reference/list/list.component.html
@@ -1,4 +1,5 @@
-<div class="page">
+<div class="page list-page">
+    <button class="blue"  (click)="navigateTo('/administration/reference/new')">Ajouter une référence</button>
     <app-administration-reference-list></app-administration-reference-list>
 </div>
   
