--- a/site/src/app/components/partials/administration-account-add/administration-account-add.component.html
+++ b/site/src/app/components/partials/administration-account-add/administration-account-add.component.html
@@ -80,5 +80,5 @@
     </div>
   </div>
 
-  <button type="submit" class="blue">Créer</button>
+  <button class="blue" type="submit">Créer</button>
 </form>
