--- a/site/src/app/components/partials/administration-reference-list/administration-reference-list.component.html
+++ b/site/src/app/components/partials/administration-reference-list/administration-reference-list.component.html
@@ -11,9 +11,9 @@
       <td>{{ reference.name }}</td>
       <td>{{ reference.type.name }}</td>
       <td class="actions">
-        <div class="button red" (click)="onReferenceDelete(reference.code)">
+        <button class="red" (click)="onReferenceDelete(reference.code)">
           Supprimer
-        </div>
+        </button>
       </td>
     </tr>
   </tbody>
