--- a/site/src/app/components/pages/administration/equipment/list/list.component.html
+++ b/site/src/app/components/pages/administration/equipment/list/list.component.html
@@ -1,4 +1,5 @@
-<div class="page">
+<div class="page list-page">
+    <button class="blue"  (click)="navigateTo('/administration/equipment/new')">Ajouter un équipement</button>
     <app-administration-equipment-list></app-administration-equipment-list>
 </div>
   
