--- a/site/src/app/components/pages/administration/type/list/list.component.html
+++ b/site/src/app/components/pages/administration/type/list/list.component.html
@@ -1,4 +1,5 @@
-<div class="page">
+<div class="page list-page">
+    <button class="blue"  (click)="navigateTo('/administration/type/new')">Ajouter un type</button>
     <app-administration-type-list></app-administration-type-list>
 </div>
   
