--- a/site/src/app/components/partials/account-form/account-form.component.html
+++ b/site/src/app/components/partials/account-form/account-form.component.html
@@ -66,7 +66,7 @@
       </div>
     </div>
   </div>
-  <button class="change-password-button blue" type="submit">
+  <button class="blue" type="submit">
     Changer le mot de passe
   </button>
 </form>
