--- a/site/src/app/components/partials/user-loan-request-form/user-loan-request-form.component.html
+++ b/site/src/app/components/partials/user-loan-request-form/user-loan-request-form.component.html
@@ -62,5 +62,5 @@
     </div>
   </div>
 
-  <button type="submit">Demander un emprunt</button>
+  <button class="blue" type="submit">Demander un emprunt</button>
 </form>
