--- a/site/src/styles/form.css
+++ b/site/src/styles/form.css
@@ -9,11 +9,11 @@
   gap: 2.5em;
 }
 
-.form > div > select {
+.form select {
   all: unset;
 }
 
-.form > div > input, .form > div > select {
+.form input, .form select {
   background-color: white;
   border: 1px solid var(--grey);
   padding: .5em;
@@ -23,20 +23,11 @@
   box-sizing: border-box;
 }
 
-.form > div > .invalid-input {
+.form .invalid-input {
   border-color: var(--red)
 }
 
-.form > button {
-  padding: 0.7em;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1em;
-  width: 100%;
-}
-
-.form > div > .invalid-indicator {
+.form .invalid-indicator {
   color: var(--red);
   font-size: 0.8em;
   line-height: 0;
