validators et select placeholder

--- a/site/src/app/components/partials/account-form/account-form.component.html
+++ b/site/src/app/components/partials/account-form/account-form.component.html
@@ -8,7 +8,7 @@
     <input
       type="email"
       formControlName="email"
-      [attr.disabled]="true"
+      [disabled]="true"
       [ngClass]="{ 'red': submitted && formControls['email'].errors }"
     />
     <div
