--- a/site/src/app/components/partials/administration-account-add/administration-account-add.component.html
+++ b/site/src/app/components/partials/administration-account-add/administration-account-add.component.html
@@ -70,7 +70,7 @@
       placeholder="Rôle"
       formControlName="roleName" 
       [ngClass]="{ 'invalid-input': submitted && formControls['roleName'].errors }">
-      <option value="" disabled hidden selected>Selectionnez un rôle</option>
+      <option value="" disabled hidden selected>Sélectionner un rôle</option>
       <option *ngFor="let role of roles" [value]="role.name">{{ role.displayName }}</option>
     </select>
     <div *ngIf="submitted && formControls['roleName'].errors" class="invalid-indicator">
