--- a/site/src/app/components/pages/user/equipments/available/list/list.component.html
+++ b/site/src/app/components/pages/user/equipments/available/list/list.component.html
@@ -1,4 +1,4 @@
 <div class="page list-page">
     <app-types-dropdown (typeSelected)="onTypeChange($event)"></app-types-dropdown>
-    <app-user-loanable-list [selectedType]="selectedType"></app-user-loanable-list>    
+    <app-user-available-equipments-list [selectedType]="selectedType"></app-user-available-equipments-list>    
 </div>
