show user organization

--- a/site/src/app/components/partials/administration-account-list/administration-account-list.component.html
+++ b/site/src/app/components/partials/administration-account-list/administration-account-list.component.html
@@ -22,6 +22,12 @@
         >
           Supprimer
         </button>
+        <button
+          class="blue"
+          (click)="viewOrganizations(account.email_address)"
+        >
+          Voir organisations
+        </button>
       </td>
     </tr>
   </tbody>
