--- a/site/src/app/components/partials/header/header.component.html
+++ b/site/src/app/components/partials/header/header.component.html
@@ -1,4 +1,4 @@
 <div class='navbar'>
   <span>Équipements</span>
-  <img src='../../../../assets/home.png' alt='Accueil' (click)='navigateTo()'>
+  <img src='../../../../assets/home.png' alt='Accueil' (click)='navigateToHome()'>
 </div>
