--- a/site/src/app/components/partials/administration-accounts-list/administration-accounts-list.component.html
+++ b/site/src/app/components/partials/administration-accounts-list/administration-accounts-list.component.html
@@ -16,6 +16,12 @@
       <td>{{ account.role.display_name_french }}</td>
       <td class="actions">
         <button
+          class="blue"
+          (click)="navigateToOrganizations(account.email_address)"
+        >
+          Gérer les organisations
+        </button>
+        <button
           class="red"
           (click)="onAccountDelete(account.email_address)"
           [disabled]="account.role.name === 'ADMINISTRATOR'"
