fix action buttons for loans administration

--- a/site/src/app/components/partials/administration-loans-list/administration-loans-list.component.html
+++ b/site/src/app/components/partials/administration-loans-list/administration-loans-list.component.html
@@ -52,7 +52,7 @@
           <button
             class="red"
             (click)="onLoanStateUpdate(loan.equipment.code, 'REFUSED')"
-            [disabled]="loan.state.name !== 'RETURN_REQUESTED'"
+            [disabled]="loan.state.name !== 'REQUESTED'"
           >
             Refuser la demande d'emprunt
           </button>
