--- a/site/src/app/components/partials/administration-accounts-list/administration-accounts-list.component.html
+++ b/site/src/app/components/partials/administration-accounts-list/administration-accounts-list.component.html
@@ -1,4 +1,4 @@
-<table class="table">
+<table>
   <thead>
     <tr>
       <th>Email</th>
@@ -9,6 +9,9 @@
     </tr>
   </thead>
   <tbody>
+    <tr *ngIf="accounts.length === 0">
+      <td colspan="5">Aucun compte</td>
+    </tr>
     <tr *ngFor="let account of accounts">
       <td>{{ account.email_address }}</td>
       <td>{{ account.first_name }}</td>
