--- a/site/src/app/components/partials/administration-new-account-form/administration-new-account-form.component.html
+++ b/site/src/app/components/partials/administration-new-account-form/administration-new-account-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addAccountForm" (ngSubmit)="onSubmit()" class="form account-form">
+<form [formGroup]="addAccountForm" (ngSubmit)="onSubmit()">
   <div>
     <label for="email">Email</label>
     <input
