--- a/site/src/app/components/partials/administration-types-list/administration-types-list.component.html
+++ b/site/src/app/components/partials/administration-types-list/administration-types-list.component.html
@@ -15,7 +15,7 @@
       <td>{{ type.organization_only ? "Oui" : "Non" }}</td>
       <td>
         <div class="actions">
-          <button class="red" (click)="onTypeDelete(type.code)">
+          <button class="red" (click)="onTypeDelete(type.name)">
             Supprimer
           </button>
         </div>
