--- a/site/src/app/components/partials/login-form/login-form.component.html
+++ b/site/src/app/components/partials/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
   <div>
     <label for="email">E-Mail</label>
     <input
