--- a/site/src/app/components/partials/user-loan-request-form/user-loan-request-form.component.html
+++ b/site/src/app/components/partials/user-loan-request-form/user-loan-request-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="loanRequestForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
   <div *ngIf="!organizationOnly">
     <label for="loanType">Pour qui souhaitez-vous emprunter ?</label>
     <select
