new reference form

--- a/site/src/app/components/partials/administration-new-type-form/administration-new-type-form.component.html
+++ b/site/src/app/components/partials/administration-new-type-form/administration-new-type-form.component.html
@@ -6,7 +6,8 @@
     <label for="name">Nom</label>
     <input
       formControlName="name"
-      [ngClass]="{ 'red': submitted && formControls['name'].errors }"
+      placeholder="Nom"
+      [ngClass]="{ 'invalid-input': submitted && formControls['name'].errors }"
     />
     <div
       *ngIf="submitted && formControls['name'].errors"
