--- a/site/src/app/components/partials/administration-references-list/administration-references-list.component.html
+++ b/site/src/app/components/partials/administration-references-list/administration-references-list.component.html
@@ -15,7 +15,7 @@
       <td>{{ reference.type.name }}</td>
       <td>
         <div class="actions">
-          <button class="red" (click)="onReferenceDelete(reference.code)">
+          <button class="red" (click)="onReferenceDelete(reference.name)">
             Supprimer
           </button>
         </div>
